<resources>
    <string name="app_name">Parrot Wings DDD</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_login">Войти</string>
    <string name="registration">Зарегистрироваться?</string>
    <string name="btnRegistation">Зарегистировать</string>
    <string name="login">Имя пользователя</string>
    <string name="password">Пароль</string>
    <string name="email">Email</string>
    <string name="invalidLoginOrPassword">Неверный логин либо пароль</string>
    <string name="userAlreadyExists">Пользователь с таким email уже существует</string>
    <string name="emailValidatorError">Неверный формат email</string>
    <string name="exceedsBalanceError">Превышен баланс</string>
    <string name="lastTransactionsHistory">История последних транзакций</string>
    <string name="profile">Профиль</string>
    <string name="createTransfer">Создать перевод</string>
    <string name="nameLabel">Имя:</string>
    <string name="emailLabel">Email:</string>
    <string name="transferAmount">Сумма перевода</string>
    <string name="send">Отправить</string>
    <string name="createTransaction">Создание транзакции</string>
    <string name="userWitheSuchNameNotFound">Пользователь с таким именем не найден</string>
    <string name="recipientName">Имя получателя</string>
    <string name="requiredField">Обязательное для заполнения поле</string>
    <string name="noConnectionInternet">Проблемы с Интернетом. Проверьте соединение и повторите заново</string>
    <string name="unauthorizedError">Вы не авторизованы.</string>
    <string name="error">Ошибка</string>
    <string name="invalidUser">Пользователь не найден</string>
    <string name="transactionMyself">Перевод средств самому себе невозможен</string>
</resources>
