<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:bind="http://schemas.android.com/tools">
    <data>
        <variable name="viewModel"
                  type="company.alex.com.parrotwings.ui.presentation.screens.authorization.login.LoginViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:focusable="true"
            android:focusableInTouchMode="true"

            android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="60dp"
                app:layout_constraintTop_toBottomOf="@+id/logo" android:id="@+id/textInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={viewModel.login}"
                    android:id="@+id/edEmail"
                    android:afterTextChanged="@{() -> viewModel.onInputTextChanged()}"
                    android:hint="@string/email"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="32dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="32dp" android:id="@+id/textInputLayout2">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={viewModel.password}"
                    android:afterTextChanged="@{() -> viewModel.onInputTextChanged()}"
                    android:inputType="textPassword"
                    android:hint="@string/password"/>
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
                   android:src="@drawable/ic_logo" app:layout_constraintEnd_toEndOf="parent"
                   android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                   android:layout_marginStart="8dp" android:layout_marginTop="70dp"
                   app:layout_constraintTop_toTopOf="parent" android:id="@+id/logo"/>

        <Button
                android:text="@string/btn_login"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:enabled="@{viewModel.isLoginAvailable}"
                android:id="@+id/btnLogin"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="60dp" app:layout_constraintStart_toStartOf="parent"
                android:onClick="@{() -> viewModel.login()}"
                android:layout_marginStart="60dp" app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
                android:layout_marginTop="32dp"/>
        <TextView
                android:text="@string/registration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvRegistration"
                android:textSize="16sp"
                android:textColor="@color/colorPrimaryDark"
                android:onClick="@{() -> viewModel.navigateToRegistration()}"
                app:layout_constraintTop_toBottomOf="@+id/btnLogin" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" android:layout_marginTop="30dp"/>

        <include layout="@layout/loader_overlay" app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
                 bind:isLoading="@{viewModel.isLoading}"
                 app:layout_constraintTop_toTopOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>