<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable name="viewModel"
                  type="company.alex.com.parrotwings.ui.presentation.screens.profile.ProfileViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                       xmlns:app="http://schemas.android.com/apk/res-auto"
                                                       xmlns:tools="http://schemas.android.com/tools"
                                                       android:layout_width="match_parent"
                                                       android:layout_height="match_parent"
                                                       tools:context=".ui.presentation.screens.profile.ProfileFragment">

        <Toolbar android:layout_width="match_parent"
                 android:background="@color/colorPrimary"
                 android:titleTextColor="@android:color/white"
                 android:layout_height="?attr/actionBarSize"
                 app:navigationIcon="@drawable/ic_arrow"
                 android:title="@string/profile" app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
                 android:id="@+id/toolbar"/>
        <TextView
                android:text="@string/nameLabel"
                android:layout_width="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:id="@+id/textView2" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="24dp" android:layout_marginTop="45dp"
                app:layout_constraintTop_toBottomOf="@+id/toolbar"/>
        <TextView
                android:text="@{viewModel.userInfo.name}"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView3"
                app:layout_constraintBottom_toBottomOf="@+id/textView2"
                app:layout_constraintTop_toTopOf="@+id/textView2"
                android:layout_marginStart="24dp" app:layout_constraintStart_toEndOf="@+id/textView2"/>
        <TextView
                android:text="@string/emailLabel"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView4" android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/textView2" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="24dp"/>
        <TextView
                android:text="@{viewModel.userInfo.email}"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView5" app:layout_constraintStart_toEndOf="@+id/textView4"
                android:layout_marginStart="24dp"
                app:layout_constraintTop_toTopOf="@+id/textView4"
                app:layout_constraintBottom_toBottomOf="@+id/textView4"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>