<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:bind="http://schemas.android.com/tools">
    <data>
        <variable name="viewModel"
                  type="company.alex.com.parrotwings.ui.presentation.screens.authorization.registration.RegistrationViewModel"/>
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="60dp" app:layout_constraintTop_toBottomOf="@+id/imgLogo"
                android:id="@+id/tilUsername">
            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:afterTextChanged="@{() -> viewModel.onInputTextChanged()}"
                    android:text="@={viewModel.userName}"
                    android:hint="@string/login"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/tilUsername"
                android:id="@+id/tilPassword">
            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:afterTextChanged="@{() -> viewModel.onInputTextChanged()}"
                    android:text="@={viewModel.password}"
                    android:hint="@string/password"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="56dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/tilPassword"
                android:id="@+id/tilEmail">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={viewModel.email}"
                    android:id="@+id/edEmail"
                    android:afterTextChanged="@{() -> viewModel.onInputTextChanged()}"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email"/>
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:src="@drawable/ic_logo"
                android:id="@+id/imgLogo" android:layout_marginTop="70dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"/>

        <Button
                android:text="@string/btnRegistation"
                android:layout_width="0dp"
                android:layout_height="52dp"
                android:id="@+id/btnRegistration"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="60dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="60dp"
                android:onClick="@{() -> viewModel.registration()}"
                android:enabled="@{viewModel.isRegistrationAvailable}"
                android:layout_marginTop="40dp" app:layout_constraintTop_toBottomOf="@+id/tilEmail"/>

        <include layout="@layout/loader_overlay" app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
                 bind:isLoading="@{viewModel.isLoading}"
                 app:layout_constraintTop_toTopOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>