<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable name="viewModel"
                  type="company.alex.com.parrotwings.ui.presentation.screens.newTransaction.NewTransactionViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.presentation.screens.newTransaction.NewTransactionFragment">

        <Toolbar android:layout_width="match_parent"
                 android:background="@color/colorPrimary"
                 android:titleTextColor="@android:color/white"
                 android:layout_height="wrap_content"
                 app:navigationIcon="@drawable/ic_arrow"
                 android:title="@string/createTransaction"
                 android:id="@+id/toolbar"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                           android:layout_height="130dp"
                                                           app:layout_constraintStart_toStartOf="parent"
                                                           android:background="@color/colorPrimary"
                                                           app:layout_constraintEnd_toEndOf="parent"
                                                           app:layout_constraintHorizontal_bias="0.0"
                                                           app:layout_constraintTop_toBottomOf="@+id/toolbar"
                                                           android:id="@+id/constraintLayout">

            <com.mancj.materialsearchbar.MaterialSearchBar
                    android:id="@+id/searchBar"
                    style="@style/MaterialSearchBarLight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:mt_placeholder="Имя получателя"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
                    android:layout_marginBottom="8dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tilPassword"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" android:layout_marginTop="45dp">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/transferAmount"/>
        </com.google.android.material.textfield.TextInputLayout>
        <Button
                android:text="@string/send"
                android:textAllCaps="false"
                android:layout_width="0dp"
                style="@style/Widget.MaterialComponents.Button"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:layout_height="55dp"
                android:id="@+id/button4" android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/tilPassword" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="80dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="80dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>